--- a/src/main/resources/templates/loadReport.html
+++ b/src/main/resources/templates/loadReport.html
@@ -30,7 +30,7 @@
 <body>
 
 <header th:insert ="~{fragments/header :: header}"></header>
-<div class="container" style="margin-left: 200px; margin-right: 200px;">
+<div class="container" style="margin-left: 200px; margin-right: 200px; height: 80vh">
 
   <form class="needs-validation" th:method="post" th:action="@{/loadReport}" enctype="multipart/form-data">
     <br>
