--- a/src/main/resources/templates/negList.html
+++ b/src/main/resources/templates/negList.html
@@ -66,11 +66,6 @@
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        // var negPhraseArray1 = [];
-        // var searchQueryArray1 = [];
-        // var negPhraseArray2 = [];
-        // var searchQueryArray2 = [];
-
         window.onscroll = function() {scrollFunction()};
 
         function scrollFunction() {
@@ -137,8 +132,6 @@
                     cell.style.color = 'red';
                 }
             });
-            // var negPhraseArray1 = [[${negPhrases}]];
-            // var searchQueryArray1 = [[${searchQueries}]];
         });
         function applySelectedOption(searchQueryId) {
             var selectedElement = document.getElementById('select-' + searchQueryId);
@@ -274,98 +267,14 @@
                 }
             }
         }
-        // function endCleaning() {
-        //     var negPhraseArray1 = [];
-        //     var searchQueryArray1 = [];
-        //     var negPhraseArray2 = [];
-        //     var searchQueryArray2 = [];
-        //
-        //     // Проходим по каждой строке в первой таблице
-        //     $("#first-table tbody tr").each(function () {
-        //         var tds = tr.childNodes;
-        //         if (tds[6] === 'searchQuery') searchQueryArray1.push(tds[7]);
-        //         else negPhraseArray1.push(tds[7]);
-        //     });
-        //
-        //     $("#second-table tbody tr").each(function () {
-        //         var tds = tr.childNodes;
-        //         if (tds[6] === 'searchQuery') searchQueryArray2.push(tds[7]);
-        //         else negPhraseArray2.push(tds[7]);
-        //     });
-        //
-        //     // Отправляем массивы на сервер
-        //     $.ajax({
-        //         url: "/endCleaning",
-        //         method: "POST",
-        //         data: JSON.stringify({ negPhrases1: negPhraseArray1, searchQueries1: searchQueryArray1, negPhrases2: negPhraseArray2, searchQueries2: searchQueryArray2 }),
-        //         contentType: "application/json",
-        //         success: function (response) {
-        //             // Обработка успешного ответа от сервера
-        //         },
-        //         error: function (error) {
-        //             // Обработка ошибки
-        //         },
-        //     });
-        // }
-        // function endCleaning() {
-        //     var negPhraseArray1 = [];
-        //     var searchQueryArray1 = [];
-        //     var negPhraseArray2 = [];
-        //     var searchQueryArray2;
-        //
-        //     // Проходим по каждой строке в первой таблице
-        //     $("#first-table tbody tr").each(function () {
-        //         var tds = $(this).find("td"); // Получаем все ячейки в текущей строке
-        //         var objectType = $(tds[7]).attr("text"); // Получаем тип объекта ("negPhrase" или "searchQuery")
-        //         var objectId = $(tds[6]).text(); // Получаем ID объекта
-        //
-        //         if (objectType === 'searchQuery') {
-        //             searchQueryArray1.push(objectId);
-        //         } else {
-        //             negPhraseArray1.push(objectId);
-        //         }
-        //     });
-        //
-        //     // Проходим по каждой строке во второй таблице
-        //     $("#second-table tbody tr").each(function () {
-        //         var tds = $(this).find("td"); // Получаем все ячейки в текущей строке
-        //         var objectType = $(tds[7]).attr("text"); // Получаем тип объекта ("negPhrase" или "searchQuery")
-        //         var objectId = $(tds[6]).text(); // Получаем ID объекта
-        //
-        //         if (objectType === 'searchQuery') {
-        //             searchQueryArray2.push(objectId);
-        //         } else {
-        //             negPhraseArray2.push(objectId);
-        //         }
-        //     });
-        //
-        //     // Отправляем массивы на сервер
-        //     $.ajax({
-        //         url: "/endCleaning",
-        //         method: "POST",
-        //         data: JSON.stringify({
-        //             negPhrases1: negPhraseArray1,
-        //             searchQueries1: searchQueryArray1,
-        //             negPhrases2: negPhraseArray2,
-        //             searchQueries2: searchQueryArray2
-        //         }),
-        //         contentType: "application/json",
-        //         success: function (response) {
-        //             // Обработка успешного ответа от сервера
-        //         },
-        //         error: function (error) {
-        //             // Обработка ошибки
-        //         },
-        //     });
-        //     alert('Чистка завершена');
-        // }
+
     </script>
 </head>
 <body>
 
 <header th:insert ="~{fragments/header :: header}"></header>
 
-<div class="container" style="margin-right: 100px">
+<div class="container" style="margin-right: 100px; height: 80vh">
     <div class="row">
         <div class="col">
             <br>
@@ -391,8 +300,8 @@
                             <th class="sortable" style="font-weight: normal; border-bottom: none" scope="col">Соответствие</th>
                             <th scope="col" style="width: 40px"></th>
                             <th scope="col" style="width: 40px"></th>
-                            <th scope="col" style="visibility: hidden"></th>
-                            <th scope="col" style="visibility: hidden"></th>
+                            <th scope="col" style="display: none"></th>
+                            <th scope="col" style="display: none"></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -421,8 +330,8 @@
                                             <img src="/static/images/move.png" alt="Аккаунт" height="20" width="20">
                                         </button>
                                 </td>
-                                <td th:text="${negPhrase.getId()}" style="visibility: hidden"></td>
-                                <td text="negPhrase" style="visibility: hidden"></td>
+                                <td th:text="${negPhrase.getId()}" style="display: none"></td>
+                                <td text="negPhrase" style="display: none"></td>
                             </tr>
                             <tr th:each="searchQuery : ${searchQueries}">
                                 <td th:text="${searchQuery.getSearchQuery.getCampaign()}"></td>
@@ -448,8 +357,8 @@
                                         <img src="/static/images/move.png" alt="Аккаунт" height="20" width="20">
                                     </button>
                                 </td>
-                                <td th:text="${searchQuery.getSearchQuery.getId()}" style="visibility: hidden"></td>
-                                <td text="searchQuery" style="visibility: hidden"></td>
+                                <td th:text="${searchQuery.getSearchQuery.getId()}" style="display: none"></td>
+                                <td text="searchQuery" style="display: none"></td>
                             </tr>
                         </tbody>
                     </table>
@@ -478,8 +387,8 @@
                             <th class="sortable" style="font-weight: normal; border-bottom: none" scope="col">Соответствие</th>
                             <th scope="col" style="width: 40px"></th>
                             <th scope="col" style="width: 40px"></th>
-                            <th scope="col" style="visibility: hidden"></th>
-                            <th scope="col" style="visibility: hidden"></th>
+                            <th scope="col" style="display: none"></th>
+                            <th scope="col" style="display: none"></th>
                         </tr>
                         </thead>
                         <tbody>
