--- a/src/main/resources/templates/person.html
+++ b/src/main/resources/templates/person.html
@@ -94,7 +94,7 @@
 
 <header th:insert ="~{fragments/header :: header}"></header>
 
-<div class="container" style="margin-right: 100px; padding-left: 200px; padding-right: 300px">
+<div class="container" style="margin-right: 100px; padding-left: 200px; padding-right: 300px; height: 80vh">
     <br>
     <div class="row justify-content-center">
         <div style="text-align: center; width: 150px; height: 150px; border-radius: 100%; border: 2px solid #ffc24b; overflow: hidden; display: flex; justify-content: center; align-items: center;">
