--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -90,7 +90,7 @@
 <body>
 
 <header th:insert ="~{fragments/header :: header}"></header>
-<div class="container" style="margin-right: 100px; padding-left: 200px; padding-right: 300px">
+<div class="container" style="margin-right: 100px; padding-left: 200px; padding-right: 300px; height: 80vh">
         <div th:each="person : ${people}">
             <br>
             <div class="card">
